--- a/topino.html
+++ b/topino.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>MrCheddah - Topo Più Piccolo nel Gioco</title>
+  <title>MrCheddah</title>
   <style>
     body {
       margin: 0;
@@ -245,3 +245,4 @@
   </script>
 </body>
 </html>
+
